--- a/MVCWebUI/appsettings.json
+++ b/MVCWebUI/appsettings.json
@@ -8,5 +8,12 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+
+
+    "AppSettings": {
+        "Title": "E-Trade",
+        "AcceptedExtentions": ".jpg, jpeg, .png",
+        "AcceptedLength": 0.5 //mb
+    }
 }
