--- a/MVCWebUI/appsettings.Development.json
+++ b/MVCWebUI/appsettings.Development.json
@@ -1,8 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AppSettings": {
+        "Title": "E-Trade",
+        "AcceptedExtentions": ".jpg, jpeg, .png",
+        "AcceptedLength": 0.5 //mb
     }
-  }
 }
